--- a/web-app/reports/CupomFechamento.jrxml
+++ b/web-app/reports/CupomFechamento.jrxml
@@ -21,9 +21,9 @@
 	<field name="mesa.numero" class="java.lang.Integer"/>
 	<field name="estab.nomefantasia" class="java.lang.String"/>
 	<field name="estab.telefone" class="java.lang.String"/>
-	<field name="utilizacaoMesa.nome" class="java.lang.String"/>
-	<field name="utilizacaoMesa.id" class="java.lang.Number"/>
-	<field name="utilizacaoMesa.dataFim" class="java.lang.String"/>
+	<field name="pedidoCapa.nome" class="java.lang.String"/>
+	<field name="pedidoCapa.id" class="java.lang.Number"/>
+	<field name="pedidoCapa.dataFim" class="java.lang.String"/>
 	<field name="estab.endereco" class="java.lang.String"/>
 	<field name="estab.numero" class="java.lang.String"/>
 	<field name="estab.cidade" class="java.lang.String"/>
@@ -33,10 +33,10 @@
 	<field name="preco" class="java.lang.Double"/>
 	<field name="total" class="java.lang.Double"/>
 	<field name="qtde" class="java.lang.Double"/>
-	<field name="itemAdd" class="java.lang.String"/>
-	<field name="utilizacaoMesa.total" class="java.lang.Double"/>
-	<field name="utilizacaoMesa.subTotal" class="java.lang.Double"/>
-	<field name="utilizacaoMesa.servico" class="java.lang.Double"/>
+	<field name="itemAdicional" class="java.lang.String"/>
+	<field name="pedidoCapa.total" class="java.lang.Double"/>
+	<field name="pedidoCapa.subTotal" class="java.lang.Double"/>
+	<field name="pedidoCapa.servico" class="java.lang.Double"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -74,7 +74,7 @@
 				<textElement>
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{mesa.label} + ": " + $F{mesa.numero} + " - " + $F{utilizacaoMesa.nome}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{mesa.label} + ": " + $F{mesa.numero} + " - " + $F{pedidoCapa.nome}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="d0aa5e29-3cde-48b5-9444-46f139ec80a9" x="2" y="32" width="202" height="14"/>
@@ -113,7 +113,7 @@
 				<textElement textAlignment="Right">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{pedido.label} + ": " + $F{utilizacaoMesa.id}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{pedido.label} + ": " + $F{pedidoCapa.id}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="112a5cb5-6191-4fe3-9c10-9de5317fbb4b" x="2" y="45" width="202" height="20"/>
@@ -148,7 +148,7 @@ $F{estab.estado} + " - " + $F{estab.telefone}]]></textFieldExpression>
 					<font size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[($F{situacao}.equals("D")?"--D-- ":"") +
-$F{item} + ($F{itemAdd}.equals("")?"":" a:" + $F{itemAdd})]]></textFieldExpression>
+$F{item} + ($F{itemAdicional}.equals("")?"":" a:" + $F{itemAdicional})]]></textFieldExpression>
 			</textField>
 			<textField pattern="###0.00">
 				<reportElement uuid="3339ba2a-6457-4730-bc80-bc0e3ef36bd8" x="168" y="0" width="36" height="12"/>
@@ -189,7 +189,7 @@ $F{item} + ($F{itemAdd}.equals("")?"":" a:" + $F{itemAdd})]]></textFieldExpressi
 				<textElement textAlignment="Right">
 					<font size="8" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{utilizacaoMesa.subTotal}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pedidoCapa.subTotal}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="9cc1a557-9396-49e1-97d6-89b8e3359a8f" x="2" y="37" width="202" height="10"/>
@@ -217,14 +217,14 @@ $F{item} + ($F{itemAdd}.equals("")?"":" a:" + $F{itemAdd})]]></textFieldExpressi
 				<textElement textAlignment="Right">
 					<font size="8" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{utilizacaoMesa.servico}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pedidoCapa.servico}]]></textFieldExpression>
 			</textField>
 			<textField pattern="###0.00">
 				<reportElement uuid="11f3734f-dc87-4cc7-8a65-11e6d2a1ac55" x="133" y="20" width="71" height="10"/>
 				<textElement textAlignment="Right">
 					<font size="8" isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{utilizacaoMesa.total}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pedidoCapa.total}]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
